Fix subnav dark theme background and padding on small screens

--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -115,7 +115,7 @@
     white-space: nowrap;
 
     @media (max-width: $breakpoint-navigation-threshold) {
-      padding: $spv-inner--small $grid-margin-width;
+      padding: $spv-inner--small 0;
     }
 
     @media (min-width: $breakpoint-navigation-threshold) {
@@ -154,7 +154,7 @@
   }
 
   %subnav-item--dark-theme {
-    background-color: $colors--dark-theme--background;
+    background-color: $colors--dark-theme--background-highlighted;
 
     &,
     &:active,
